[package]
name = "rust_cloudfare_ddns_client"
version = "0.1.0"
authors = ["Jordan Morris <jtmorrisbytes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"